# netplan-types

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE.md  LICENSE-MIT.md  Makefile  README.md  cbindgen.toml
.github/workflows/: actions.yaml
src/: bool.rs  lib.rs
src/netplan/: authentication.rs  dhcp.rs  mod.rs  routing.rs
src/netplan/device_types/: bonds.rs  bridges.rs  dummy_devices.rs  ethernets.rs  mod.rs  modems.rs  physical.rs  tunnels.rs  vlans.rs  vrfs.rs  wifis.rs
